correct clear button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div id="contents">
                 <div id="row1" class="contentrow">
-                    <button id="AC">C</button>
+                    <button id="c">C</button>
                     <button id="neg">+/-</button>
                     <button id="mod" class="operand">%</button>
                     <button id="backspace"><img src="backspace.svg"></button>
