--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <button id="four" class="digit">4</button>
                     <button id="five" class="digit">5</button>
                     <button id="six" class="digit">6</button>
-                    <button id="mul" class="operand">x</button>
+                    <button id="mul" class="operand">*</button>
                 </div>
                 <div id="row4" class="contentrow">
                     <button id="one" class="digit">1</button>
